# Jack-Quad

./: README.md
JACK-Common/jack_description/: CMakeLists.txt
JACK-Common/jack_description/config/: description_config.rviz  jack_joints.yaml
JACK-Common/jack_description/launch/: jack_rviz.launch  jack_spawner.launch
JACK-Common/jack_description/urdf/: jack.inertial.xacro  jack.original.urdf.xacro  jack.properties.xacro  jack.transmision.xacro  jack.urdf.txt  jack.urdf.xacro
JACK-Framework/jack_controller/: CMakeLists.txt
JACK-Framework/jack_controller/include/jack_controller/: jack_controller.h
JACK-Framework/jack_controller/src/jack_controller/: jack_controller.cpp
JACK-Framework/jack_framework_common/: CMakeLists.txt
JACK-Framework/jack_framework_common/include/jack_framework_common/: motion_module.h  singleton.h
JACK-Motion/bezier_walk/: CMakeLists.txt  package.xml
JACK-Motion/bezier_walk/config/: demo.yaml
JACK-Motion/bezier_walk/include/bezier_walk/: IKSolver.h  bezierwalk.h  kinematic.h  trajectory.h
JACK-Motion/bezier_walk/src/: IKSolver.cpp  bezierwalk.cpp  kinematic.cpp  trajectory.cpp
JACK-Motion/jack_manager/: CMakeLists.txt
JACK-Motion/jack_manager/src/: jack_manager.cpp
